--- a/epic.html
+++ b/epic.html
@@ -24,85 +24,61 @@
 
                         </div>
                         <div class="content_epic_common2">
-                          <a href="" class="btn btn-danger swing">PLAY!</a>
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
                     </div>
-                  </div>
-                  <div class="row">
-                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                      </div>
-                      <div class="content_epic_common2">
-                        <a href="" class="btn btn-danger swing">PLAY!</a>
-                  </div>
                 </div>
-                <div class="row">
-                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
                     </div>
-                    <div class="content_epic_common2">
-                      <a href="" class="btn btn-danger swing">PLAY!</a>
                 </div>
-              </div>
-              <div class="row">
-                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
-                  </div>
-                  <div class="content_epic_common2">
-                    <a href="" class="btn btn-danger swing">PLAY!</a>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
+                    </div>
                 </div>
-                <div class="content_epic_common2">
-                  <a href="" class="btn btn-danger swing">PLAY!</a>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
-              </div>
-              <div class="content_epic_common2">
-                <a href="" class="btn btn-danger swing">PLAY!</a>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
+                    </div>
+                </div>
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
-            </div>
-            <div class="content_epic_common2">
-              <a href="" class="btn btn-danger swing">PLAY!</a>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
+                    </div>
+                </div>
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
-          </div>
-          <div class="content_epic_common2">
-            <a href="" class="btn btn-danger swing">PLAY!</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
+                    </div>
+                </div>
+                                    <div class="row">
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
-        </div>
-        <div class="content_epic_common2">
-          <a href="" class="btn btn-danger swing">PLAY!</a>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-      </div>
-      <div class="content_epic_common2">
-        <a href="" class="btn btn-danger swing">PLAY!</a>
-  </div>
-</div>
+                        </div>
+                        <div class="content_epic_common2">
+                          <a href="gaming.html" class="btn btn-danger swing">PLAY!</a>
+                    </div>
+                </div>
             </div>
 
         </div>
-                <div id="footer">
+                <div class="footer">
             <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
         </div>
     </div>
