--- a/index.html
+++ b/index.html
@@ -28,23 +28,22 @@
                 <h2>News</h2>
             </div>
               <div class="news_content">
-                <h1>News10</h1>
-                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
-				  qwertyuidsnfuivniudsfnviunsfdiuviudfn sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv oivdsvnfindvniudsvbduyfviudfvdfivdfi 
-				  qwertyuidsnfuivniudsfnviunsfdiuviudfn sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv oivdsvnfindvniudsvbduyfviudfvdfivdfi 
-				  qwertyuidsnfuivniudsfnviunsfdiuviudfn sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv oivdsvnfindvniudsvbduyfviudfvdfivdfi 
-				  qwertyuidsnfuivniudsfnviunsfdiuviudfn sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv oivdsvnfindvniudsvbduyfviudfvdfivdfi 
-				  qwertyuidsnfuivniudsfnviunsfdiuviudfn sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv oivdsvnfindvniudsvbduyfviudfvdfivdfi 
+                <h1>Fish text news</h1>
+<p>Suddenly, the actions of representatives of the opposition call us to new achievements, which, in turn, should be functionally separated into independent elements. As it has already been repeatedly registered, the shareholders of the largest companies, initiative exclusively synthetically, are limited exclusively to the way of thinking.</p>
+
+<p>Being only part of the overall picture, independent states call us to new achievements, which, in turn, should be indicated as applicants for the role of key factors. The cohesiveness of the team of professionals ensures the relevance of the allocation of resources and resources. But the cohesiveness of the team of professionals is perfect for implementing innovative methods of process management.</p>
+
+<p>A high level of involvement of representatives of the target audience is clear evidence of a simple fact: the training boundary entails the process of introducing and modernizing existing financial and administrative conditions. But the main features of the structure of the project in an exceptionally positive light.</p>
+
+<p>Gentlemen, the innovative path chosen by us directly depends on the positions taken by the participants in relation to the tasks assigned. High level of involvement in the ranks of participants, including in the framework of the tasks. In our quest to improve the user experience, we are missing what can be mixed with non-unique data to a degree of perfect unrecognizability, which increases their uselessness status.</p>
+
+<p>But the strengthening and development of the internal structure plays a role in the formation of development models. Suddenly, aspiring to displace traditional production, nanotechnologies, regardless of their level, should be exposed. But the immediate participants of technological progress. A diverse and rich experience tells us that the strengthening and development of internal architecture allows us to assess the importance of the allocation of resources and resources!</p>
+
+<p>Taking into account the indicators of success, the economic agenda of today unambiguously records the need for a system of training of personnel corresponding to the pressing needs. The innovative path chosen by us requires us to analyze the timely fulfillment of a super task. Taking into account the success indicators, the high quality of position research plays a decisive role for the new principles of the formation of the material and technical base and the personnel base. Thus, the modern development methodology predetermines the high demand for the progress of the professional community.</p>
                 </div>
                 <div class="news_content">
                   <h1>News9</h1>
-                    qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                    sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                    oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                    oivdsvnfindvniudsvbduyfviudfvdfivdfi
+<p>Suddenly, the actions of representatives of the opposition call us to new achievements, which, in turn, should be functionally separated into independent elements. As it has already been repeatedly registered, the shareholders of the largest companies, initiative exclusively synthetically, are limited exclusively to the way of thinking.</p>
                   </div>
                   <div class="news_content">
               <h1>News8</h1>
@@ -55,54 +54,21 @@
               </div>
               <div class="news_content">
                 <h1>News7</h1>
-                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
+<p>Being only part of the overall picture, independent states call us to new achievements, which, in turn, should be indicated as applicants for the role of key factors. The cohesiveness of the team of professionals ensures the relevance of the allocation of resources and resources. But the cohesiveness of the team of professionals is perfect for implementing innovative methods of process management.</p>
                 </div>
                 <div class="news_content">
                   <h1>News6</h1>
-                    qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                    sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                    oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                    oivdsvnfindvniudsvbduyfviudfvdfivdfi
+<p>Gentlemen, the innovative path chosen by us directly depends on the positions taken by the participants in relation to the tasks assigned. High level of involvement in the ranks of participants, including in the framework of the tasks. In our quest to improve the user experience, we are missing what can be mixed with non-unique data to a degree of perfect unrecognizability, which increases their uselessness status.</p>
                   </div>
               <div class="news_content">
                 <h1>News5</h1>
-                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
+<p>But the strengthening and development of the internal structure plays a role in the formation of development models. Suddenly, aspiring to displace traditional production, nanotechnologies, regardless of their level, should be exposed. But the immediate participants of technological progress. A diverse and rich experience tells us that the strengthening and development of internal architecture allows us to assess the importance of the allocation of resources and resources!</p>
                 </div>
                 <div class="news_content">
                 <h1>News4</h1>
-                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
+<p>Taking into account the indicators of success, the economic agenda of today unambiguously records the need for a system of training of personnel corresponding to the pressing needs. The innovative path chosen by us requires us to analyze the timely fulfillment of a super task. Taking into account the success indicators, the high quality of position research plays a decisive role for the new principles of the formation of the material and technical base and the personnel base. Thus, the modern development methodology predetermines the high demand for the progress of the professional community.</p>
                 </div>
-                <div class="news_content">
-              <h1>News3</h1>
-                qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                oivdsvnfindvniudsvbduyfviudfvdfivdfi
-              </div>
-              <div class="news_content">
-              <h1>News2</h1>
-                qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                oivdsvnfindvniudsvbduyfviudfvdfivdfi
-              </div>
-              <div class="news_content">
-              <h1>News</h1>
-                qwertyuidsnfuivniudsfnviunsfdiuviudfn
-                sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
-                oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
-                oivdsvnfindvniudsvbduyfviudfvdfivdfi
-              </div>
-              <div id="footer">
+              <div class="footer">
           <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
       </div>
 
