--- a/rating.html
+++ b/rating.html
@@ -98,7 +98,7 @@
         <td>non-active</td>
     </tr>
 </table>
-<div id="footer">
+<div class="footer">
 <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
 </div>
 
