--- a/battle.html
+++ b/battle.html
@@ -20,21 +20,22 @@
               <a href="rating.html">Rating</a>
             </nav>
     </div>
-            <div id="news_header">
-            <h2>Battles</h2>
-        </div >
+        
     <div class="container">
-
+    <div id="news_header">
+            <h2>Battles</h2>
+        </div>
         <div class="news_header">
             <a  href="common.html" id="slider" class="buttons btn btn-primary " style="background-color: darkgray;border: solid 1px  black">common games</a>
             <a href="epic.html" id="slider2" class="buttons btn btn-primary " style="background-color: rebeccapurple;border: solid 1px  yellow;color:yellow;">Epic games</a>
             <a href="group.html" id="slider3" class="buttons btn btn-primary " style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
             <a href="survial.html" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 2px  yellow;color:yellow;">Survial games</a>
         </div>
-                <div id="footer">
+
+    </div>
+                    <div class="footer">
             <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
         </div>
-    </div>
     </div>
 </body>
 </html>
