--- a/rating.html
+++ b/rating.html
@@ -21,87 +21,227 @@
               <a href="rating.html">Rating</a>
             </nav>
     </div>
-    <div id="rating_table_title"><h4>RATING OF PLAYERS</h4></div>
-<table id="rating_table">
+    <div class="container">
+
+        <div id="news_header">
+            <h2>Rating</h2>
+        </div>
+        <div class="ratingdiv">
+<table class="rating">
     <tr>
-        <th>POSITION</th>
-        <th>AVATAR</th>
-        <th>LOCATION</th>
-        <th>PLAYER</th>
-        <th>POINTS</th>
-        <th>WIN</th>
-        <th>DRAW</th>
-        <th>LOSE</th>
-        <th>STATUS</th>
+        <td>POSITION</td>
+        <td>PLAYER</td>
+        <td>LOCATION&nbsp;&nbsp;</td>
+        <td>POINTS&nbsp;&nbsp;</td>
+        <td>WIN</td>
+        <td>STATUS</td>
     </tr>
     <tr>
         <td>1</td>
         <td>Garry Kasparov</td>
+        <td><image src="images/flagu.png" width="20" height="20""></td>
         <td>4 700</td>
         <td>74</td>
-        <td>11</td>
-        <td>28</td>
-        <td>active</td>
+        <td><image src="images/green.png" width="20" height="20""></td>
     </tr>
     <tr>
         <td>2</td>
         <td>Bobby Fischer</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
         <td>2 850</td>
         <td>66</td>
-        <td>9</td>
-        <td>38</td>
-        <td>active</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
     </tr>
     <tr>
         <td>3</td>
         <td>Petya Weitzman</td>
+                <td><image src="images/flagya.png" width="20" height="20""></td>
         <td>1 400</td>
         <td>57</td>
-        <td>5</td>
-        <td>39</td>
-        <td>active</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
     </tr>
     <tr>
         <td>4</td>
         <td>Dominant</td>
+                <td><image src="images/flagya.png" width="20" height="20""></td>
         <td>900</td>
         <td>55</td>
-        <td>11</td>
-        <td>48</td>
-        <td>non-active</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
     </tr>
     <tr>
         <td>5</td>
         <td>Logic</td>
+                <td><image src="images/flagya.png" width="20" height="20""></td>
         <td>700</td>
         <td>49</td>
-        <td>6</td>
-        <td>38</td>
-        <td>active</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
     </tr>
     <tr>
         <td>6</td>
         <td>ChessChempion</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
         <td>500</td>
         <td>34</td>
-        <td>1</td>
-        <td>28</td>
-        <td>active</td>
+        <td><image src="images/green.png " width="20" height="20"></td>
     </tr>
     <tr>
         <td>7</td>
         <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
         <td>300</td>
         <td>22</td>
-        <td>0</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>8</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>9</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>10</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>11</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>12</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
         <td>13</td>
-        <td>non-active</td>
+        <td>Genius</td>
+                <td><image src="images/flagya.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>14</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>15</td>
+        <td>Genius</td>
+                <td><image src="images/flagya.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>16</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>17</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>18</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>19</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>20</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>21</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>22</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+        <tr>
+        <td>23</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
+    </tr>
+            <tr>
+        <td>24</td>
+        <td>Genius</td>
+                <td><image src="images/flagu.png" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/green.png" width="20" height="20"></td>
+    </tr>
+            <tr>
+        <td>25</td>
+        <td>Genius</td>
+                <td><image src="images/flagr.jpg" width="20" height="20""></td>
+        <td>300</td>
+        <td>22</td>
+        <td><image src="images/red.png" width="20" height="20"></td>
     </tr>
 </table>
+ </div>
+</div>
+</div>
 <div class="footer">
 <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
-</div>
-
 </div>
 </body>
 </html>
