--- a/battle.html
+++ b/battle.html
@@ -29,7 +29,7 @@
             <a  href="common.html" id="slider" class="buttons btn btn-primary " style="background-color: darkgray;border: solid 1px  black">common games</a>
             <a href="epic.html" id="slider2" class="buttons btn btn-primary " style="background-color: rebeccapurple;border: solid 1px  yellow;color:yellow;">Epic games</a>
             <a href="group.html" id="slider3" class="buttons btn btn-primary " style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
-            <a href="survial.html" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 2px  yellow;color:yellow;">Survial games</a>
+            <a href="survial.html" id="slider4" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 2px  yellow;color:yellow;">Survial games</a>
         </div>
 
     </div>
